--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="about-content">
           <h2 class="heading">About <span>Me</span></h2>
           <p class="description">
-            Aku adalah seoerang siswa dari smk muhammadiyah 1 sukoharjo dengan jurusan rekayasa perangkat lunak.Sekarang aku sedang duduk dikelas 11 dan sedang mempelajari bahasa pemrograman dart.Aku sudah sedikit menguasai HTML,CSS,dan
+            Aku adalah seorang siswa dari smk muhammadiyah 1 sukoharjo dengan jurusan rekayasa perangkat lunak.Sekarang aku sedang duduk dikelas 11 dan sedang mempelajari bahasa pemrograman dart.Aku sudah sedikit menguasai HTML,CSS,dan
             JavaScript.
           </p>
         </div>
